--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -2,10 +2,10 @@
   "name": "phonebook",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
+    "dev": "nodemon src/index.js",
     "build:ui": "rm -rf dist && cd ../../part2/phonebook/ && npm run build && cp -r dist ../../part3/phonebook",
     "build:ui:windows": "@powershell Remove-Item -Recurse -Force dist && cd ../../part2/phonebook/ && npm run build && @powershell Copy-Item dist -Recurse ../../part3/phonebook",
     "deploy": "fly deploy",
@@ -18,7 +18,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^8.0.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
