--- a/part8/graphql-library/package.json
+++ b/part8/graphql-library/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "graphql-library",
-  "version": "1.0.0",
-  "description": "",
-  "main": "library-backend.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@apollo/server": "^4.10.0",
-    "graphql": "^16.8.1",
-    "uuid": "^9.0.1"
-  }
+	"name": "graphql-library",
+	"version": "1.0.0",
+	"description": "",
+	"main": "library-backend.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "nodemon library-backend.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@apollo/server": "^4.10.0",
+		"dotenv": "^16.3.1",
+		"graphql": "^16.8.1",
+		"mongoose": "^7.0.0",
+		"mongoose-unique-validator": "^4.0.0",
+		"uuid": "^9.0.1"
+	},
+	"devDependencies": {
+		"nodemon": "^3.0.2"
+	}
 }
