--- a/part8/graphql-library/package.json
+++ b/part8/graphql-library/package.json
@@ -2,22 +2,28 @@
 	"name": "graphql-library",
 	"version": "1.0.0",
 	"description": "",
-	"main": "library-backend.js",
+	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon library-backend.js"
+		"dev": "nodemon index.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"@apollo/server": "^4.10.0",
+		"@graphql-tools/schema": "^10.0.2",
+		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
 		"graphql": "^16.8.1",
+		"graphql-subscriptions": "^2.0.0",
+		"graphql-ws": "^5.14.3",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^7.0.0",
 		"mongoose-unique-validator": "^4.0.0",
-		"uuid": "^9.0.1"
+		"uuid": "^9.0.1",
+		"ws": "^8.16.0"
 	},
 	"devDependencies": {
 		"nodemon": "^3.0.2"
