--- a/part10/rate-repository-app/package.json
+++ b/part10/rate-repository-app/package.json
@@ -11,8 +11,10 @@
 	},
 	"dependencies": {
 		"@expo/webpack-config": "^0.17.0",
+		"@types/react-native": "^0.69.1",
 		"expo": "~46.0.21",
 		"expo-status-bar": "~1.4.0",
+		"formik": "^2.4.5",
 		"react": "18.0.0",
 		"react-dom": "18.0.0",
 		"react-native": "0.69.9",
