--- a/part10/rate-repository-app/package.json
+++ b/part10/rate-repository-app/package.json
@@ -14,6 +14,7 @@
 		"@expo/metro-config": "^0.4.0",
 		"@expo/webpack-config": "^0.17.0",
 		"@types/react-native": "^0.69.1",
+		"dotenv": "^16.3.2",
 		"expo": "~46.0.21",
 		"expo-status-bar": "~1.4.0",
 		"formik": "^2.4.5",
