--- a/part10/rate-repository-app/package.json
+++ b/part10/rate-repository-app/package.json
@@ -29,6 +29,7 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native/assets-registry": "^0.74.0",
     "@types/react-native": "^0.69.1",
+    "date-fns": "^3.3.1",
     "dotenv": "^16.3.2",
     "expo": "~46.0.21",
     "expo-linking": "~3.2.4",
