--- a/part10/rate-repository-app/package.json
+++ b/part10/rate-repository-app/package.json
@@ -39,10 +39,12 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.9",
+    "react-native-paper": "^5.12.3",
+    "react-native-safe-area-context": "^4.8.2",
     "react-native-web": "~0.18.7",
     "react-router-native": "^6.21.3",
-    "yup": "^1.3.3",
-    "@react-native-picker/picker": "2.4.2"
+    "use-debounce": "^10.0.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
