--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'part11/full-stack-open-pokedex'
 
 jobs:
   simple_deployment_pipeline:
@@ -24,3 +26,9 @@ jobs:
         run: npm run build
       - name: Run tests
         run: npm test
+      - name: e2e tests
+        uses: cypress-io/github-action@v5
+        with:
+          command: npm run test:e2e
+          start: npm run start-prod
+          wait-on: http://localhost:5000
