--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,6 +19,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: part11/full-stack-open-pokedex/package-lock.json
       - name: Install dependencies
         run: npm install
       - name: Check style
