--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,6 +16,9 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+          path: part11/full-stack-open-pokedex
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
