--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,12 +5,12 @@ on:
     branches:
       - main
     paths:
-      - './part11/full-stack-open-pokedex/**'
+      - 'part11/full-stack-open-pokedex/**'
       - '.github/workflows/**'
 
 defaults:
   run:
-    working-directory: './part11/full-stack-open-pokedex'
+    working-directory: 'part11/full-stack-open-pokedex'
 
 jobs:
   build:
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: './part11/full-stack-open-pokedex/package-lock.json'
+          cache-dependency-path: 'part11/full-stack-open-pokedex/package-lock.json'
       - name: Install dependencies
         run: npm ci
       - name: Build project
