--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,6 +15,10 @@ jobs:
       run:
         working-directory: 'part11/full-stack-open-pokedex'
     steps:
+      - name: Print current directory
+        run: |
+          pwd
+          ls -l
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
@@ -32,6 +36,10 @@ jobs:
       run:
         working-directory: 'part11/full-stack-open-pokedex'
     steps:
+      - name: Print current directory
+        run: |
+          pwd
+          ls -l
       - name: Check style
         run: npm run eslint
       - name: Unit tests
