--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,9 +16,9 @@ jobs:
         working-directory: 'part11/full-stack-open-pokedex'
     steps:
       - name: Print current directory
-        run: |
-          pwd
-          ls -l
+        run: pwd
+      - name: List contents
+        run: ls
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
@@ -37,9 +37,9 @@ jobs:
         working-directory: 'part11/full-stack-open-pokedex'
     steps:
       - name: Print current directory
-        run: |
-          pwd
-          ls -l
+        run: pwd
+      - name: List contents
+        run: ls
       - name: Check style
         run: npm run eslint
       - name: Unit tests
