--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,30 +5,60 @@ on:
     branches:
       - main
     paths:
-      - 'part11/full-stack-open-pokedex'
+      - 'part11/full-stack-open-pokedex/**'
+      - '.github/workflows/**'
 
 jobs:
-  simple_deployment_pipeline:
+  build:
+    runs-on: ubuntu-20.04
     defaults:
       run:
-        working-directory: part11/full-stack-open-pokedex
+        working-directory: 'part11/full-stack-open-pokedex'
+    steps:
+      - uses: actions/checkout@v4
+      - name: Cache node modules
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+        name: List the state of node modules
+        continue-on-error: true
+        run: npm list
+      - name: Install dependencies
+        run: npm ci
+      - name: Build project
+        run: npm run build
+  tests:
+    needs: build
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - uses: actions/cache@v3
+        id: cache-npm
         with:
-          node-version: '20'
+          path: ~/.npm
+          key: ${{ runner.os }}-build-cache-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
-        run: npm install
+        if: steps.cache-npm.outputs.cache-hit != 'true'
+        run: npm ci
       - name: Check style
         run: npm run eslint
-      - name: Build project
-        run: npm run build
-      - name: Run tests
+      - name: Unit tests
         run: npm test
-      - name: e2e tests
+      - name: E2E tests
         uses: cypress-io/github-action@v5
         with:
           command: npm run test:e2e
+          build: npm run build
           start: npm run start-prod
           wait-on: http://localhost:5000
