--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,7 +9,7 @@ on:
       - '.github/workflows/**'
 
 jobs:
-  build:
+  simple_deployment_pipeline:
     runs-on: ubuntu-20.04
     defaults:
       run:
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: part11/full-stack-open-pokedex/package-lock.json
+          cache-dependency-path: '**/part11/full-stack-open-pokedex/package-lock.json'
       - name: Install dependencies
         run: npm ci
       - name: Build project
