--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,14 +13,17 @@ jobs:
     runs-on: ubuntu-20.04
     defaults:
       run:
-        working-directory: 'part11/full-stack-open-pokedex'
+        working-directory: './part11/full-stack-open-pokedex'
+    strategy:
+      matrix:
+        node-version: [20.x]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: ${{ matrix.node-version }}
           cache: 'npm'
-          cache-dependency-path: '**/package-lock.json'
+          cache-dependency-path: './part11/full-stack-open-pokedex/package-lock.json'
       - name: Install dependencies
         run: npm ci
       - name: Build project
