--- a/part11/full-stack-open-pokedex/fly.toml
+++ b/part11/full-stack-open-pokedex/fly.toml
@@ -22,8 +22,17 @@ primary_region = 'sjc'
   min_machines_running = 0
   processes = ["app"]
 
+[[http_service.checks]]
+  grace_period = "10s"
+  interval = "30s"
+  method = "GET"
+  timeout = "5s"
+  path = "/health"
+
 [[vm]]
   cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
 
+[deploy]
+  strategy = "bluegreen"
