--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,6 +7,9 @@ on:
     paths:
       - 'part11/full-stack-open-pokedex/**'
       - '.github/workflows/**'
+  pull_request:
+    branches: [main]
+    types: [opened, synchronize]
 
 jobs:
   deployment_pipeline:
