--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -47,11 +47,11 @@ jobs:
       - uses: superfly/flyctl-actions/setup-flyctl@master
         if: |
           github.event_name == 'push' ||
-          ( contains(${{github.event.commits.message}}, "#skip") )
+          ( contains(${{github.event.commits.message}}, "#skip") == 'false' )
       - name: Deploy to fly.io
         if: |
           github.event_name == 'push' ||
-          ( contains(${{github.event.commits.message}}, "#skip") )
+          ( contains(${{github.event.commits.message}}, "#skip") == 'false' )
         run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
@@ -60,10 +60,22 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
+      - name: github context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+      - name: commits
+        env:
+          COMMITS: ${{ toJson(github.event.commits) }}
+        run: echo "$COMMITS"
+      - name: commit messages
+        env:
+          COMMIT_MESSAGES: ${{ toJson(github.event.commits.message) }}
+        run: echo "$COMMIT_MESSAGES"
       - name: Bump version and push tag
         if: |
           github.event_name == 'push' ||
-          ( contains(${{github.event.commits.message}}, "#skip") )
+          ( contains(${{github.event.commits.message}}, "#skip") == 'false' )
         uses: anothrNick/github-tag-action@1.67.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
