--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,12 +46,12 @@ jobs:
           wait-on: http://localhost:5000
       - uses: superfly/flyctl-actions/setup-flyctl@master
         if: |
-          github.event_name == 'push' ||
-          (contains(${{github.event.commits.*.message}}, "#skip") == 'false')
+          github.event_name == 'push' &&
+          ${{ !(contains( join(toJson(github.event.commits.*.message) ), '#skip'))}}
       - name: Deploy to fly.io
         if: |
-          github.event_name == 'push' ||
-          (contains(${{github.event.commits.*.message}}, "#skip") == 'false')
+          github.event_name == 'push' &&
+          ${{ !(contains( join(toJson(github.event.commits.*.message) ), '#skip'))}}
         run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
@@ -74,8 +74,8 @@ jobs:
         run: echo "$COMMIT_MESSAGES"
       - name: Bump version and push tag
         if: |
-          github.event_name == 'push' ||
-          (contains(${{github.event.commits.*.message}}, "#skip") == 'false')
+          github.event_name == 'push' &&
+          ${{ !(contains( join(toJson(github.event.commits.*.message) ), '#skip'))}}
         uses: anothrNick/github-tag-action@1.67.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
