--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,7 +42,7 @@ jobs:
         run: echo "$COMMIT_MESSAGES"
       - name: check expression
         env:
-          EXPRESSION_RESULT: ${{ !(contains( join(toJson(github.event.commits.*.message) ), '#skip'))}}
+          EXPRESSION_RESULT: ${{ (contains( join(toJson(github.event.commits.*.message) ), '#skip'))}}
         run: echo "$EXPRESSION_RESULT"
 
       - name: Install dependencies
@@ -63,12 +63,10 @@ jobs:
           wait-on: http://localhost:5000
       - uses: superfly/flyctl-actions/setup-flyctl@master
         if: |
-          github.event_name == 'push' &&
-          ${{ !(contains( join(toJson(github.event.commits.*.message) ), '#skip'))}}
+          github.event_name == 'push' && !(contains(join(toJson(github.event.commits.*.message) ), '#skip'))
       - name: Deploy to fly.io
         if: |
-          github.event_name == 'push' &&
-          ${{ !(contains( join(toJson(github.event.commits.*.message) ), '#skip'))}}
+          github.event_name == 'push' && !(contains(join(toJson(github.event.commits.*.message) ), '#skip'))
         run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
@@ -79,8 +77,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Bump version and push tag
         if: |
-          github.event_name == 'push' &&
-          ${{ !(contains( join(toJson(github.event.commits.*.message) ), '#skip'))}}
+          github.event_name == 'push' && !(contains(join(toJson(github.event.commits.*.message) ), '#skip'))
         uses: anothrNick/github-tag-action@1.67.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
