--- a/part12/todo-app/todo-frontend/Dockerfile
+++ b/part12/todo-app/todo-frontend/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /usr/src/app
 COPY . .
 
 RUN npm ci
+RUN CI=true npm run test
 ENV REACT_APP_BACKEND_URL=http://localhost:3000/
 
 RUN npm run build
