--- a/part12/todo-app/todo-backend/docker-compose.dev.yml
+++ b/part12/todo-app/todo-backend/docker-compose.dev.yml
@@ -19,6 +19,23 @@ services:
     command: ['redis-server', '--appendonly', 'yes'] # Overwrite the CMD
     volumes: # Declare the volume
       - ./redis_data:/data
+  server:
+    image: todo-backend-dev
+    build:
+      context: .
+      dockerfile: dev.Dockerfile
+    volumes:
+      - ./:/usr/src/app
+    ports:
+      - 3001:3001
+    environment:
+      - PORT=3001
+      - REDIS_URL=//redis:6379
+      - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
+    depends_on:
+      - mongo
+      - redis
+    container_name: todo-backend-dev
 
 volumes:
   mongo_data:
