--- a/part12/todo-app/nginx.dev.conf
+++ b/part12/todo-app/nginx.dev.conf
@@ -13,8 +13,17 @@ http {
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
       
-      # Requests are directed to http://todo-front-dev:3000
-      proxy_pass http://todo-front-dev:3000/;
+      # Requests are directed to http:/app:3000/
+      proxy_pass http://app:3000/;
+    }
+
+    # Requests starting with /api/ are handled
+    location /api/ {
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+
+      proxy_pass http://server:3001/;
     }
   }
 }
