--- a/part12/todo-app/todo-frontend/Dockerfile
+++ b/part12/todo-app/todo-frontend/Dockerfile
@@ -6,7 +6,7 @@ COPY . .
 
 RUN npm ci
 RUN CI=true npm run test
-ENV REACT_APP_BACKEND_URL=http://localhost:3000/
+ENV REACT_APP_BACKEND_URL=/api
 
 RUN npm run build
 
