--- a/part12/todo-app/docker-compose.yml
+++ b/part12/todo-app/docker-compose.yml
@@ -20,11 +20,10 @@ services:
     volumes: # Declare the volume
       - ./todo-backend/redis_data:/data
   server:
-    image: todo-back-dev
-    container_name: todo-back-dev
+    image: todo-back
+    container_name: todo-back
     build:
       context: ./todo-backend
-      dockerfile: dev.Dockerfile
     volumes:
       - ./todo-backend/:/usr/src/app
     environment:
@@ -35,20 +34,19 @@ services:
       - mongo
       - redis
   app:
-    image: todo-front-dev
-    container_name: todo-front-dev
+    image: todo-front
+    container_name: todo-front
     build:
       context: ./todo-frontend
-      dockerfile: dev.Dockerfile
     volumes:
-      - ./todo-frontend/:/usr/src/app
+      - ./todo-frontend/build/:/usr/src/app/build
     environment:
       - REACT_APP_BACKEND_URL=/api
   nginx:
     image: nginx:1.20.1
-    container_name: todo-app-reverse-proxy
+    container_name: todo-reverse-proxy
     volumes:
-      - ./nginx.dev.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
       - 8080:80
     depends_on:
