--- a/part12/todo-app/todo-frontend/package.json
+++ b/part12/todo-app/todo-frontend/package.json
@@ -14,6 +14,7 @@
 	},
 	"scripts": {
 		"start": "WATCHPACK_POLLING=true react-scripts start",
+		"start:prod": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
