--- a/part13/bloglist-psql/package.json
+++ b/part13/bloglist-psql/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"dotenv": "^16.4.4",
 		"express": "^4.18.2",
+		"express-async-errors": "^3.1.1",
 		"pg": "^8.11.3",
 		"sequelize": "^6.37.1"
 	}
