--- a/part13/bloglist-psql/package.json
+++ b/part13/bloglist-psql/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "nodemon src/index.js",
-		"start": "node src/index.js"
+		"start": "node src/index.js",
+		"migration:down": "node utils/rollback.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -21,6 +22,7 @@
 		"express-async-errors": "^3.1.1",
 		"jsonwebtoken": "^9.0.2",
 		"pg": "^8.11.3",
-		"sequelize": "^6.37.1"
+		"sequelize": "^6.37.1",
+		"umzug": "^3.7.0"
 	}
 }
