--- a/part13/bloglist-psql/package.json
+++ b/part13/bloglist-psql/package.json
@@ -7,7 +7,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "nodemon src/index.js",
 		"start": "node src/index.js",
-		"migration:down": "node utils/rollback.js"
+		"migration:down": "node src/utils/rollback.js"
 	},
 	"keywords": [],
 	"author": "",
